force-app/main/default/objects/IDC_Task__c/IDC_Task__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents work assigned to an offshore team.</description>
    <label>IDC Task</label>
    <nameField>
        <displayFormat>IDCTask-{0000000000}</displayFormat>
        <label>IDC Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDC Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>