force-app/main/default/objects/IDC_Task__c/fields/Actual_LOE__c.field-meta.xml
<CustomField>
    <fullName>Actual_LOE__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Shows the Actual Level of efforts for the Task</description>
    <label>Actual LOE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>