force-app/main/default/objects/IDC_Task__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <description>It’s the date when the task was assigned.</description>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>