force-app/main/default/objects/IDC_Task__c/fields/Build_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Build_Task_Type__c</fullName>
    <description>Shows type of the Task</description>
    <label>Build Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>