force-app/main/default/objects/IDC_Task__c/fields/Components_Updated_in_CWB__c.field-meta.xml
<CustomField>
    <fullName>Components_Updated_in_CWB__c</fullName>
    <description>Details of the components updated in connfig workbook for the task</description>
    <label>Components Updated in CWB</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>