force-app/main/default/objects/IDC_Task__c/fields/CWB_Updated__c.field-meta.xml
<CustomField>
    <fullName>CWB_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if the Config workbook was updated or not</description>
    <label>CWB Updated?</label>
    <type>Checkbox</type>
</CustomField>