force-app/main/default/objects/IDC_Task__c/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related defect to the task</description>
    <label>Defect</label>
    <referenceTo>Defect__c</referenceTo>
    <relationshipLabel>IDC Tasks</relationshipLabel>
    <relationshipName>IDC_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>