force-app/main/default/objects/IDC_Task__c/fields/Defect_Description__c.field-meta.xml
<CustomField>
    <fullName>Defect_Description__c</fullName>
    <description>Description of the defect</description>
    <label>Defect Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>