force-app/main/default/objects/IDC_Task__c/fields/Defect_Found__c.field-meta.xml
<CustomField>
    <fullName>Defect_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if the defect was found or not</description>
    <label>Defect Found</label>
    <type>Checkbox</type>
</CustomField>