force-app/main/default/objects/IDC_Task__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the task</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>