force-app/main/default/objects/IDC_Task__c/fields/IDC_Task__c.field-meta.xml
<CustomField>
    <fullName>IDC_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related IDC Task</description>
    <label>IDC Task</label>
    <referenceTo>IDC_Task__c</referenceTo>
    <relationshipLabel>IDC Tasks</relationshipLabel>
    <relationshipName>IDC_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>