force-app/main/default/objects/IDC_Task__c/fields/Planned_LOE__c.field-meta.xml
<CustomField>
    <fullName>Planned_LOE__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Shows planned Level of efforts for the Task</description>
    <label>Planned LOE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>