force-app/main/default/objects/IDC_Task__c/fields/PM_Efforts__c.field-meta.xml
<CustomField>
    <fullName>PM_Efforts__c</fullName>
    <description>Type of &#39;PM efforts&#39; task type</description>
    <label>PM Efforts</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CAR Activities</fullName>
            </value>
            <value>
                <fullName>DAR Activities</fullName>
            </value>
            <value>
                <fullName>DART Activities</fullName>
            </value>
            <value>
                <fullName>EBS Reporting</fullName>
            </value>
            <value>
                <fullName>Project Initiation</fullName>
            </value>
            <value>
                <fullName>Project Planning</fullName>
            </value>
            <value>
                <fullName>Review Defect Logs</fullName>
            </value>
            <value>
                <fullName>Review Issue Logs</fullName>
            </value>
            <value>
                <fullName>Review Risk Logs</fullName>
            </value>
            <value>
                <fullName>Update Issue Logs</fullName>
            </value>
            <value>
                <fullName>Update Project Plan</fullName>
            </value>
            <value>
                <fullName>Update Risk Logs</fullName>
            </value>
            <value>
                <fullName>Project Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>