force-app/main/default/objects/IDC_Task__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related request to the IDC task</description>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>IDC Tasks</relationshipLabel>
    <relationshipName>IDC_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>