force-app/main/default/objects/IDC_Task__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <description>Related request&#39;s Client request ID</description>
    <formula>Request__r.Client_Request_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Name</label>
    <type>Text</type>
</CustomField>