force-app/main/default/objects/IDC_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <description>Type of the task</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Build Review</fullName>
            </value>
            <value>
                <fullName>Code Review</fullName>
            </value>
            <value>
                <fullName>Test Script Preparation</fullName>
            </value>
            <value>
                <fullName>Test Script Review</fullName>
            </value>
            <value>
                <fullName>Test Script Execution</fullName>
            </value>
            <value>
                <fullName>Defect Fix - Build</fullName>
            </value>
            <value>
                <fullName>Defect Fix - Code</fullName>
            </value>
            <value>
                <fullName>Defect Fix - Test Script</fullName>
            </value>
            <value>
                <fullName>PM Efforts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>