force-app/main/default/objects/IDC_Task__c/fields/Unit_Test_Script_Attached__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Script_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if unit test scripts were attached or not</description>
    <label>Unit Test Script Attached?</label>
    <type>Checkbox</type>
</CustomField>