force-app/main/default/objects/IDC_Task__c/validationRules/CWB_Updated_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CWB_Updated_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IF(CWB_Updated__c , True, False),
ISBLANK( Components_Updated_in_CWB__c ) )</errorConditionFormula>
    <errorDisplayField>Components_Updated_in_CWB__c</errorDisplayField>
    <errorMessage>Please enter components updated in CWB.</errorMessage>
</ValidationRule>