force-app/main/default/objects/IDC_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Task_Type__c</columns>
    <columns>Build_Task_Type__c</columns>
    <columns>Assigned_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Request__c</columns>
    <columns>Defect__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>